<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/low_contrast_linen"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:textSize="45dp"
            android:background="@color/white"
            android:text="" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:textSize="45dp"
            android:background="@color/white"
            android:text="" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="165dp"
        android:layout_marginLeft="275dp"
        android:clipChildren="false"
        android:columnCount="5"
        android:rowCount="4" >

        <Button
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:padding="20dp"
            android:onClick="onClick7"
            android:text="@string/btnValue7" />

        <Button
            android:id="@+id/button2"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:padding="20dp"
            android:onClick="onClick8"
            android:text="@string/btnValue8" />

        <Button
            android:id="@+id/button3"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:padding="20dp"
            android:onClick="onClick9"
            android:text="@string/btnValue9" />

        <Button
            android:id="@+id/button4"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:padding="20dp"
            android:onClick="onClick4"
            android:text="@string/btnValue4" />

        <Button
            android:id="@+id/button5"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:padding="20dp"
            android:onClick="onClick5"
            android:text="@string/btnValue5" />

        <Button
            android:id="@+id/button6"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:padding="20dp"
            android:onClick="onClick6"
            android:text="@string/btnValue6" />

        <Button
            android:id="@+id/button7"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:padding="20dp"
            android:onClick="onClick1"
            android:text="@string/btnValue1" />

        <Button
            android:id="@+id/button8"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:padding="20dp"
            android:onClick="onClick2"
            android:text="@string/btnValue2" />

        <Button
            android:id="@+id/button9"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:padding="20dp"
            android:onClick="onClick3"
            android:text="@string/btnValue3" />

        <Button
            android:id="@+id/button10"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:padding="20dp"
            android:onClick="onClickMulti"
            android:text="@string/btnValueMulti" />

        <Button
            android:id="@+id/button11"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:padding="20dp"
            android:onClick="onClickDiv"
            android:text="@string/btnValueDiv" />

        <Button
            android:id="@+id/button12"
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:layout_rowSpan="2"
            android:padding="20dp"
            android:height="125dp"
            android:onClick="onClickCompute"
            android:text="@string/btnValueEquals" />

        <Button
            android:id="@+id/button13"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:padding="20dp"
            android:onClick="onClickAdd"
            android:text="@string/btnValueAdd" />

        <Button
            android:id="@+id/button14"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:padding="20dp"
            android:onClick="onClickSub"
            android:text="@string/btnValueMinus" />

        <Button
            android:id="@+id/button15"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:padding="20dp"
            android:onClick="onClick0"
            android:text="@string/btnValue0" />

        <Button
            android:id="@+id/button17"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:padding="20dp"
            android:onClick="onClickLeftPara"
            android:text="@string/btnValueLeftPara" />

        <Button
            android:id="@+id/button16"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:padding="20dp"
            android:onClick="onClickRightPara"
            android:text="@string/btnValueRightPara" />

        <Button
            android:id="@+id/button18"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:padding="20dp"
            android:onClick="onClickExp"
            android:text="@string/btnValuePower" />

    </GridLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="270dp"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/gridLayout1"
        android:layout_marginTop="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
            	android:id="@+id/textViewConsole1"
	            android:layout_width="match_parent"
    	        android:layout_height="20dp"
        	    android:layout_margin="5dp"
            	android:textSize="15dp"
            	android:background="@color/white"
            	android:text="App Loaded" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>